# MultiThread

./: .gitignore  CMakeLists.txt  main.cpp
Lista 1/: CMakeLists.txt
Lista 1/Zad1/: main.cpp
Lista 1/Zad2/: lab2.cpp
Lista 1/Zad3/: lab3.cpp
Lista 1/Zad4/: lab4.cpp  server.cpp
Lista 2/: CMakeLists.txt  test.cpp
Lista 2/Zad1/: CMakeLists.txt  data.txt  jobShop.cpp  lab1.cpp
Lista 2/Zad2/: QAP.cpp  data.txt  lab2.cpp
Zad2/: lab2.cpp
